--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Travel Explorer</title>
-  <link rel="stylesheet" href="frontend/css/style.css" />
+  <link rel="stylesheet" href="./frontend/css/style.css" />
 </head>
 
 <body>
@@ -12,9 +12,9 @@
   <nav class="navbar">
     <div class="logo">Travel Explorer</div>
     <ul class="nav-links" id="navLinks">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="frontend/map.html">Map</a></li>
-      <li><a href="frontend/favorites.html">Favorites</a></li>
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./frontend/map.html">Map</a></li>
+      <li><a href="./frontend/favorites.html">Favorites</a></li>
       <li id="authLink"></li>
     </ul>
   </nav>
@@ -25,12 +25,12 @@
       <h1>Discover the World’s Best Attractions</h1>
       <p>Plan your next trip effortlessly with live weather, maps, and favorites — all in one place!</p>
       <div class="hero-buttons" id="heroButtons">
-        <a href="frontend/login.html" class="btn">Login</a>
-        <a href="frontend/register.html" class="btn btn-outline">Register</a>
+        <a href="./frontend/login.html" class="btn">Login</a>
+        <a href="./frontend/register.html" class="btn btn-outline">Register</a>
       </div>
     </div>
   </section>
 
-  <script src="frontend/js/main.js"></script>
+  <script src="./frontend/js/main.js"></script>
 </body>
 </html>
