--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - Travel Explorer</title>
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
+
 <body>
-    login
+  <nav class="navbar">
+    <div class="logo">Travel Explorer</div>
+    <ul class="nav-links">
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="./register.html">Register</a></li>
+    </ul>
+  </nav>
+
+  <div class="form-container">
+    <h2>Login</h2>
+    <form id="loginForm">
+      <div class="form-group">
+        <label>Email</label>
+        <input type="text" id="email" placeholder="Enter your email" required />
+      </div>
+
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" id="password" placeholder="Enter your password" required />
+      </div>
+
+      <button type="submit" class="btn-submit">Login</button>
+    </form>
+  </div>
+
+  <script src="./js/auth.js"></script>
 </body>
 </html>
