--- a/frontend/map.html
+++ b/frontend/map.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Travel Snapshot | Map</title>
-  <link rel="stylesheet" href="map.css" />
+  <title>Interactive Map | Travel Snapshot</title>
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
   />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <link rel="stylesheet" href="map.css" />
 </head>
 
 <body>
-  <!-- NAVBAR -->
   <nav class="navbar">
     <div class="logo">🌍 Travel Snapshot</div>
     <div class="nav-links">
@@ -22,24 +21,13 @@
     </div>
   </nav>
 
-  <!-- SEARCH BAR -->
-  <div class="search-container">
-    <input
-      type="text"
-      id="searchInput"
-      placeholder="Search for a location or attraction..."
-    />
-    <button id="searchBtn">Search</button>
-  </div>
+  <div id="map"></div>
 
-  <!-- MAIN CONTENT -->
-  <div class="map-container">
-    <div id="map"></div>
-    <div class="info-panel" id="infoPanel">
-      <h3 id="locationName">Select a location</h3>
-      <p id="weatherInfo"></p>
-      <div id="attractionList"></div>
-    </div>
+  <div class="info-panel" id="infoPanel">
+    <h3 id="countryName">Hover over a country</h3>
+    <p id="countryDetails"></p>
+    <div id="weatherInfo"></div>
+    <div id="attractionList"></div>
   </div>
 
   <script src="map.js"></script>
