--- a/frontend/map.html
+++ b/frontend/map.html
@@ -7,77 +7,82 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <style>
-    body {
+    html, body {
+      height: 100%;
       margin: 0;
+      overflow: hidden;
+      font-family: "Poppins", sans-serif;
       background-color: #0f172a;
       color: #f1f5f9;
-      font-family: "Poppins", sans-serif;
-      display: flex;
-      height: 100vh;
     }
 
     #map {
-      flex: 2;
-      height: 100%;
       width: 100%;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
     }
 
-    #info {
-      flex: 1;
-      padding: 20px;
+    .leaflet-popup-content-wrapper {
       background: #1e293b;
-      overflow-y: auto;
+      color: #f1f5f9;
+      border-radius: 10px;
+      border: 1px solid #38bdf8;
     }
 
-    h2 {
-      color: #38bdf8;
+    .leaflet-popup-content {
+      font-size: 14px;
+      line-height: 1.5;
     }
 
-    button {
+    .leaflet-popup-tip {
+      background: #1e293b;
+    }
+
+    .attr-btn {
       background: #38bdf8;
       border: none;
       color: #0f172a;
-      padding: 8px 16px;
+      padding: 6px 12px;
       border-radius: 5px;
       cursor: pointer;
-      margin-top: 10px;
+      font-size: 13px;
+      margin-top: 6px;
     }
 
-    img.flag {
-      width: 80px;
-      height: auto;
-      border-radius: 5px;
-    }
-
-    .attr-card {
-      background: #0f172a;
-      padding: 10px;
-      margin-top: 10px;
+    .flag {
+      width: 60px;
       border-radius: 6px;
-      border: 1px solid #38bdf8;
+      display: block;
+      margin-bottom: 5px;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
-  <div id="info">
-    <h2>Click on a country</h2>
-    <div id="details"></div>
-  </div>
 
   <script>
-    const BASE_URL = "https://sesd-project-7gqa.onrender.com";
-    const token = localStorage.getItem("access_token"); // stored during login
+    const BASE_URL = "https://sesd-project-7gqa.onrender.com"; // backend on Render
+    const token = localStorage.getItem("access_token"); // stored from login
 
-    const map = L.map("map").setView([20, 0], 2);
+    // Initialize map
+    const map = L.map("map", {
+      minZoom: 2,
+      maxBounds: [
+        [-85, -180],
+        [85, 180]
+      ],
+      worldCopyJump: true
+    }).setView([20, 0], 2);
 
     L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
       attribution: "© OpenStreetMap contributors"
     }).addTo(map);
 
-    // Highlight clicked country boundaries
     let geojsonLayer;
+    let attractionMarkers = [];
 
+    // Fetch country info
     async function fetchCountryData(name) {
       try {
         const res = await fetch(`${BASE_URL}/location/${encodeURIComponent(name)}`);
@@ -89,6 +94,7 @@
       }
     }
 
+    // Fetch weather
     async function fetchWeather(lat, lng) {
       try {
         const res = await fetch(`${BASE_URL}/weather?lat=${lat}&lng=${lng}`);
@@ -100,6 +106,7 @@
       }
     }
 
+    // Fetch attractions
     async function fetchAttractions(name) {
       try {
         const res = await fetch(`${BASE_URL}/attractions/${encodeURIComponent(name)}`);
@@ -111,6 +118,7 @@
       }
     }
 
+    // Add favorite
     async function addFavorite(name) {
       if (!token) {
         alert("Please log in first!");
@@ -132,7 +140,27 @@
       }
     }
 
-    // Load country borders (GeoJSON)
+    // Add marker with popup
+    function addAttractionMarker(attraction, countryName) {
+      const marker = L.marker([attraction.lat, attraction.lng]).addTo(map);
+      const popupContent = `
+        <div>
+          <b>${attraction.name}</b><br>
+          ${attraction.description || ""}<br>
+          <button class="attr-btn" onclick="addFavorite('${countryName}')">❤️ Favorite</button>
+        </div>
+      `;
+      marker.bindPopup(popupContent);
+      attractionMarkers.push(marker);
+    }
+
+    // Clear old markers
+    function clearAttractionMarkers() {
+      attractionMarkers.forEach(m => map.removeLayer(m));
+      attractionMarkers = [];
+    }
+
+    // GeoJSON World Map
     fetch("https://raw.githubusercontent.com/johan/world.geo.json/master/countries.geo.json")
       .then(res => res.json())
       .then(data => {
@@ -140,9 +168,9 @@
           style: {
             color: "#38bdf8",
             weight: 1,
-            fillOpacity: 0.2,
+            fillOpacity: 0.2
           },
-          onEachFeature: function (feature, layer) {
+          onEachFeature: (feature, layer) => {
             const name = feature.properties.name;
             layer.on({
               mouseover: (e) => {
@@ -152,35 +180,40 @@
                 e.target.setStyle({ fillOpacity: 0.2, color: "#38bdf8" });
               },
               click: async (e) => {
-                map.fitBounds(layer.getBounds());
+                clearAttractionMarkers();
+                map.fitBounds(layer.getBounds(), { padding: [20, 20] });
+
                 const info = await fetchCountryData(name);
                 if (!info) return;
 
                 const weather = await fetchWeather(info.latlng[0], info.latlng[1]);
                 const attractions = await fetchAttractions(name);
 
-                const detailsDiv = document.getElementById("details");
-                detailsDiv.innerHTML = `
-                  <h2>${info.name}</h2>
-                  <img src="${info.flag}" class="flag" />
-                  <p><b>Capital:</b> ${info.capital}</p>
-                  <p><b>Currency:</b> ${info.currency}</p>
-                  <p><b>Languages:</b> ${info.languages.join(", ")}</p>
-                  <p><b>Population:</b> ${info.population?.toLocaleString() || "Unknown"}</p>
-                  <p><b>Region:</b> ${info.region}</p>
-                  <p><b>Weather:</b> ${weather?.weather?.temperature ?? "N/A"}°C</p>
-                  <button onclick="addFavorite('${info.name}')">❤️ Add to Favorites</button>
-                  <h3>Attractions</h3>
-                  ${
-                    attractions?.attractions?.length
-                      ? attractions.attractions.map(a => `
-                        <div class='attr-card'>
-                          <b>${a.name}</b><br>
-                          ${a.description || ""}
-                        </div>`).join("")
-                      : "<p>No attractions available.</p>"
-                  }
+                // Country info popup at capital position (or center)
+                const popupLatLng = info.latlng[0] && info.latlng[1]
+                  ? [info.latlng[0], info.latlng[1]]
+                  : e.latlng;
+
+                const content = `
+                  <div>
+                    <img src="${info.flag}" class="flag" />
+                    <b>${info.name}</b><br>
+                    Capital: ${info.capital}<br>
+                    Currency: ${info.currency}<br>
+                    Temp: ${weather?.weather?.temperature ?? "N/A"}°C<br>
+                    <button class="attr-btn" onclick="addFavorite('${info.name}')">❤️ Favorite Country</button>
+                  </div>
                 `;
+
+                L.popup({ closeOnClick: true })
+                  .setLatLng(popupLatLng)
+                  .setContent(content)
+                  .openOn(map);
+
+                // Add attraction markers
+                if (attractions?.attractions?.length) {
+                  attractions.attractions.forEach(a => addAttractionMarker(a, info.name));
+                }
               }
             });
           }
