--- a/frontend/favorites.html
+++ b/frontend/favorites.html
@@ -1,11 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Favorites | Travel Explorer</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <style>
+    body {
+      background: #f9fafb;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    nav.navbar {
+      background: #0d6efd;
+    }
+
+    .navbar-brand, .nav-link {
+      color: white !important;
+      font-weight: 500;
+    }
+
+    .favorites-container {
+      flex: 1;
+      padding: 40px 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .favorite-card {
+      border-radius: 15px;
+      overflow: hidden;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s;
+    }
+
+    .favorite-card:hover {
+      transform: scale(1.02);
+    }
+
+    .favorite-card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+
+    .favorite-card .card-body {
+      background: white;
+      padding: 15px;
+    }
+
+    .loading-spinner {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 60vh;
+    }
+
+    .no-favorites {
+      text-align: center;
+      margin-top: 80px;
+      font-size: 1.3rem;
+      color: #666;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px 0;
+      background: #0d6efd;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-    favorites
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="map.html">🌍 Travel Explorer</a>
+      <div class="d-flex">
+        <a class="nav-link" href="map.html">Map</a>
+        <a class="nav-link active" href="favorites.html">Favorites</a>
+        <a class="nav-link" href="#" id="logoutBtn">Logout</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Content -->
+  <div class="favorites-container">
+    <div id="loading" class="loading-spinner">
+      <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+
+    <div id="favoritesList" class="row g-4 d-none"></div>
+
+    <div id="noFavorites" class="no-favorites d-none">
+      You haven’t added any favorites yet 😔<br />
+      Explore places and add your favorites from the <a href="map.html">map</a>!
+    </div>
+  </div>
+
+  <footer>
+    © 2025 Travel Explorer. All rights reserved.
+  </footer>
+
+  <script>
+    const BASE_URL = "https://sesd-project-7gqa.onrender.com";
+    const token = localStorage.getItem("access_token");
+
+    if (!token) {
+      alert("Please log in first.");
+      window.location.href = "login.html";
+    }
+
+    async function loadFavorites() {
+      const listEl = document.getElementById("favoritesList");
+      const loadingEl = document.getElementById("loading");
+      const noFavEl = document.getElementById("noFavorites");
+
+      try {
+        const res = await fetch(`${BASE_URL}/favorites/`, {
+          headers: {
+            Authorization: `Bearer ${token}`,
+          },
+        });
+
+        loadingEl.classList.add("d-none");
+
+        if (!res.ok) {
+          throw new Error("Failed to fetch favorites");
+        }
+
+        const data = await res.json();
+        const favorites = data.favorites || [];
+
+        if (favorites.length === 0) {
+          noFavEl.classList.remove("d-none");
+          return;
+        }
+
+        listEl.classList.remove("d-none");
+        listEl.innerHTML = "";
+
+        favorites.forEach((fav) => {
+          const card = document.createElement("div");
+          card.className = "col-md-4";
+
+          const imgSrc = fav.image || (fav.images && fav.images[0]) || "https://via.placeholder.com/400x250?text=No+Image";
+          card.innerHTML = `
+            <div class="card favorite-card">
+              <img src="${imgSrc}" alt="${fav.name}" />
+              <div class="card-body">
+                <h5 class="card-title">${fav.name}</h5>
+                <p class="card-text">${fav.description || "No description available."}</p>
+                <button class="btn btn-outline-danger btn-sm" onclick="removeFavorite(${fav.id})">
+                  ❤️ Remove
+                </button>
+              </div>
+            </div>
+          `;
+
+          listEl.appendChild(card);
+        });
+      } catch (err) {
+        loadingEl.classList.add("d-none");
+        alert("Error loading favorites: " + err.message);
+      }
+    }
+
+    async function removeFavorite(id) {
+      if (!confirm("Remove this attraction from favorites?")) return;
+
+      try {
+        const res = await fetch(`${BASE_URL}/favorites/${id}`, {
+          method: "DELETE",
+          headers: {
+            Authorization: `Bearer ${token}`,
+          },
+        });
+
+        if (!res.ok) {
+          throw new Error("Failed to remove favorite");
+        }
+
+        alert("Removed successfully!");
+        loadFavorites();
+      } catch (err) {
+        alert("Error: " + err.message);
+      }
+    }
+
+    document.getElementById("logoutBtn").addEventListener("click", () => {
+      localStorage.removeItem("access_token");
+      window.location.href = "login.html";
+    });
+
+    loadFavorites();
+  </script>
 </body>
 </html>
